# PushA

./: .gitignore  README.md  compose.yml
services/player-service/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
services/player-service/app/: config.py  main.py
services/player-service/app/api/: __init__.py  dependencies.py  endpoints.py  exception_handlers.py  health.py  players.py  profiles.py  reviews.py
services/player-service/app/db/: __init__.py  base.py  database.py  integrity.py  session.py  transaction.py
services/player-service/app/domain/: __init__.py  enums.py  exceptions.py  models.py  player_queries.py
services/player-service/app/grpc/: __init__.py  dependencies.py  mappers.py  server.py  servicer.py  validation.py
services/player-service/app/repositories/: __init__.py  exceptions.py  mappers.py  player_repository.py
services/player-service/app/schemas/: __init__.py  common.py  player.py  pofile.py  profile.py  review.py
services/player-service/app/services/: __init__.py  exceptions.py  player_logic.py  player_query_service.py  player_service.py  profile_service.py  rating_service.py  review_service.py  transactions.py
services/player-service/migrations/: env.py
services/player-service/scripts/: generate_grpc.py  grpc_client.py  seed_grpc_data.py
services/player-service/tests/: test_api.py  test_api_dependencies.py  test_config.py  test_db.py  test_domain_models.py  test_grpc.py  test_integrity.py  test_player_queries.py  test_repositories.py  test_schemas.py  test_services.py
(+59 files in other folders)
