[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "valorant-player-service"
version = "0.1.0"
description = "Player profiles and teammate reviews for Valorant matchmaking"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "fastapi==0.138.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "sqlalchemy==2.0.51",
    "uvicorn==0.49.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
